_sass/minima/custom-styles.scss
// Minima styles

@font-face {
  font-family: 'Montserrat';
  src: url('/assets/fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
}

body {
  font-family: 'Montserrat', sans-serif, Arial, sans-serif;
}

.site-header {
  border-top: none;
}

.site-title {
  font-weight: normal;
}

.site-nav {
  .page-link {
    color: $link-base-color;
  }
}

.site-icon {
  display: inline-block;
  margin-right: 10px;
  vertical-align: middle;
}

.svg-icon {
  color: $text-color;
}

.footer-col-wrapper {
  gap: 20px;
}

.footer-heading {
  font-size: 1em !important;
  font-weight: bold;
  color: $title-color;
  margin-bottom: 10px;
}

.footer-col-1,
.footer-col-2,
.footer-col-3 {
  flex: 1 1 25%;
  align-content: left;
  margin-bottom: 30px;
}

.footer-col-1 {
  flex: 1 1 50%;
}

.post-meta {
  color: $text-color;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: $title-color;
  font-weight: bold;
  font-size: 1em !important;
}

h1 {
  font-size: 1.5em !important;
}

h2 {
  font-size: 1.25em !important;
}

.post-content h1 {
  @include relative-font-size(5);

  @media screen and (min-width: $on-large) {
    @include relative-font-size(5);
  }
}

// Custom styles

.page {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  width: auto;
  text-align: center;
  gap: 30px;
}

.page-banner {
  width: 100%;
  height: auto;
  border-radius: 8px;
}

.widget-container {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  width: auto;
  text-align: center;
  gap: 30px;
}

.widget {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: auto;
  padding: 15px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
  border-radius: 16px;
  border: 2px solid $button-border-color;
  background-color: $button-color;
  gap: 20px;
  transition: transform 0.2s ease;
}

.widget:hover {
  background-color: $button-hover-color;
  transform: scale(1.02);
}

.widget-image {
  width: 100%;
  height: auto;
  border-radius: 8px;
}

.widget-text {
  margin: 15px 0;
  text-align: center;
  font-size: 1em;
  font-weight: bold;
  color: $title-color;
}

.widget-button:hover {
  background-color: $button-hover-color;
}

.center-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin: 0;
}

.social-container {
  display: flex;
  gap: 10px;
}

.social-icon {
  @extend .svg-icon;
  color: $link-base-color;
  margin-right: 5px;
}

.footer-link {
  display: flex;
  gap: 10px;
  color: $link-base-color;
}

.footer-description {
  color: $text-color;
}

.gallery {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.gallery-item {
  flex: 1 1 calc(33.333% - 10px);
  box-sizing: border-box;
}

.gallery-item img {
  width: 100%;
  height: auto;
  display: block;
  border-radius: 4px;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: $background-color;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  border-radius: 2px;
  border: 1px solid;
  width: max-content;
  z-index: 1;
}

.dropdown-content a {
  font-weight: normal;
  padding: 8px;
  display: block;
  text-align: left;
  line-height: normal;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown-arrow {
  font-size: 1.5em;
  margin-left: 2px;
  vertical-align: center;
}

